GNOME Bugzilla – Bug 648318
Shift-insert doesn't paste text
Last modified: 2014-04-26 19:22:21 UTC
can't paste text from the clipboard into the text fields of gnome-shell. I tried to paste also with the mouse-wheel and it doesn't work neither. but when I try to copy, it works.
Pasting with Ctrl+V should work. PRIMARY selections aren't currently supported.
This is a real usability bug for users used to PRIMARY selections.
or: As Jasper noted, Ctrl+V is supposed to work, and works at least on Fedora. So what distributions are you using, and what versions of the Shell? These are obvious details any decent bug report should provide. Jean-André: that's another bug, please file it separately if you want the Shell to support that.
(In reply to comment #3) > Jean-André: that's another bug, please file it separately if you want the Shell > to support that. It *is* another bug, namely bug 645019 :)
Ctrl+V works great, but Shift+Insert and mouse-wheel click doesn't work.
can this bug be marked duplicate of bug 645019 ?
(In reply to comment #6) > can this bug be marked duplicate of bug 645019 ? The reporter has a point in that shift-insert works elsewhere, so let's make this bug about that particular issue.
*** Bug 699093 has been marked as a duplicate of this bug. ***
Hi there I'm setting the status to NEW as the number of bugs is unmanageable, I hope it gonna help to find accurate bugs
Created attachment 275224 [details] [review] st-entry: Handle <shift>insert GTK+ supports this as alternative to <ctrl>v, so let's do the same for consistency.
Review of attachment 275224 [details] [review]: Works for me.
Attachment 275224 [details] pushed as 2489716 - st-entry: Handle <shift>insert